[package]
name = "stdinix"
version = "0.2.0"
authors = ["blakehawkins"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility function to reduce boilerplate for reading from stdin"
homepage = "https://github.com/blakehawkins/stdinix"
documentation = "https://docs.rs/stdinix/"
repository = "https://github.com/blakehawkins/stdinix"
readme = "README.md"

[dependencies]
