[package]
name = "stdinix"
version = "0.3.0"
authors = ["blakehawkins"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Utility function to reduce boilerplate for reading from stdin"
homepage = "https://github.com/blakehawkins/stdinix"
documentation = "https://docs.rs/stdinix/"
repository = "https://github.com/blakehawkins/stdinix"
readme = "README.md"

[dependencies]
eyre = "0.6"
